btns hover +footer

--- a/about-us.html
+++ b/about-us.html
@@ -182,6 +182,7 @@
         </div>
     </div>
 </section>
+<!--FOOTER-->
 <footer>
     <div class="footer_top">
         <div class="footer_top_left">
@@ -213,7 +214,7 @@
                                 <label for="f_message">Сообщение</label>
                                 <textarea id="f_message" rows="5" cols="33"></textarea>
                             </div>
-                            <button type="submit"  class="adv_btn fs20 f_btn">Отправить</button>
+                            <button type="submit"  class="btn-2"><span>Отправить</span></button>
                         </form>
                     </div>
                 </div>
@@ -249,9 +250,9 @@
                     <div>
                         <p class="orange">Телефон</p>
                         <p>Виктория Колесник:</p>
-                        <p>+38(096)761 761 6</p>
+                        <p><a href="tel://+380967617616">+38(096)761 761 6</a></p>
                         <p>Игорь Шорох</p>
-                        <p>+38(050)662 551 1</p>
+                        <p><a href="tel://+380506625511">+38(050)662 551 1</a></p>
                     </div>
                 </div>
                 <div class="f_contacts">
@@ -260,17 +261,16 @@
                     </span>
                     <div>
                         <p class="orange">Telegram</p>
-                        <p>+3(093)761 761 6</p>
+                        <p><a href="tel://+30937617616 ">+3(093)761 761 6</a></p>
                     </div>
                 </div>
             </div>
             <div class="contact_map">
                 <img data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                <div class="stripes"></div>
             </div>
             <div class="f_mail">
-                <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте<br> нам запрос и мы свяжемся с вами в течении часа<br>
-                    <span class="orange">advanced.kh.ua@gmail.com</span>
+                <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте нам запрос и мы свяжемся с вами в течении часа<br>
+                    <span><a href="mailto:advanced.kh.ua@gmail.com" class="orange">advanced.kh.ua@gmail.com</a></span>
                 </p>
             </div>
         </div>
@@ -294,7 +294,7 @@
             </div>
             <div>
                 <div class="footer_copyright">
-                    <p class="r">Copyright &copy; 2019 ADVANCE. All rights reserved</p>
+                    <p class="r">Copyright &copy; 2019-2020 ADVANCE. All rights reserved</p>
                 </div>
             </div>
         </div>
@@ -304,10 +304,13 @@
                 <p class="r">в социальных сетях</p>
             </div>
             <div class="social_wrapper">
-                <span><img data-lazy="src/img/footer/insta.svg" src="/" alt="instagram icon"></span>
-                <span><img data-lazy="src/img/footer/facebook.svg" src="/" alt="facebook icon"></span>
+                <span><a href="#"><img data-lazy="src/img/footer/insta.svg" src="/" alt="instagram icon"></a></span>
+                <span><a href="#"><img data-lazy="src/img/footer/facebook.svg" src="/" alt="facebook icon"></a></span>
             </div>
         </div>
+    </div>
+    <div class="footer_mobile_copy">
+        <p>Copyright &copy; 2019-2020 ADVANCE.<br> All rights reserved</p>
     </div>
 </footer>
 <script defer src="src/script/slider.js">
