--- a/blog-page.html
+++ b/blog-page.html
@@ -184,7 +184,7 @@
     </div>
     <div class="main_why_we xxx2_2 s_m">
         <div>
-            <button class="why_we_slogan adv_btn s_m">Больше новостей</button>
+            <button class="why_we_slogan adv_btn"><span><a href="#">Больше новостей</a></span></button>
         </div>
     </div>
 </section>
@@ -220,7 +220,7 @@
                                 <label for="f_message">Сообщение</label>
                                 <textarea id="f_message" rows="5" cols="33"></textarea>
                             </div>
-                            <button type="submit"  class="adv_btn fs20 f_btn">Отправить</button>
+                            <button type="submit"  class="btn-2"><span>Отправить</span></button>
                         </form>
                     </div>
                 </div>
@@ -273,10 +273,9 @@
             </div>
             <div class="contact_map">
                 <img data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
-                <div class="stripes"></div>
             </div>
             <div class="f_mail">
-                <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте<br> нам запрос и мы свяжемся с вами в течении часа<br>
+                <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте нам запрос и мы свяжемся с вами в течении часа<br>
                     <span><a href="mailto:advanced.kh.ua@gmail.com" class="orange">advanced.kh.ua@gmail.com</a></span>
                 </p>
             </div>
@@ -291,7 +290,7 @@
                 <div class="footer_nav">
                     <nav class="main_menu">
                         <ul class="menu_ul">
-                            <li class="fs20 active">Услуги</li>
+                            <li class="fs20">О нас</li>
                             <li class="fs20">Портфолио</li>
                             <li class="fs20">Новости</li>
                             <li class="fs20">Контакты</li>
@@ -301,7 +300,7 @@
             </div>
             <div>
                 <div class="footer_copyright">
-                    <p class="r">Copyright &copy; 2019 ADVANCE. All rights reserved</p>
+                    <p class="r">Copyright &copy; 2019-2020 ADVANCE. All rights reserved</p>
                 </div>
             </div>
         </div>
@@ -315,6 +314,9 @@
                 <span><a href="#"><img data-lazy="src/img/footer/facebook.svg" src="/" alt="facebook icon"></a></span>
             </div>
         </div>
+    </div>
+    <div class="footer_mobile_copy">
+        <p>Copyright &copy; 2019-2020 ADVANCE.<br> All rights reserved</p>
     </div>
 </footer>
 </body>
