--- a/category-page.html
+++ b/category-page.html
@@ -165,7 +165,7 @@
 </section>
 <section class="main_our_works xxx5">
     <div>
-        <div class="why_we_slogan bigger_center"><span class="adv_btn"><link  href="#" >Портфолио</span></div>
+        <div class="why_we_slogan bigger_center"><div class="adv_btn"><span><a href="#" >Портфолио</a></span></div></div>
     </div>
 </section>
 <section class="main_service_wrapper category_fix">
