--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
                         <div class="dropdown_wrapper">
                             <div class="menu_category">
                                 <ul>
-                                    <li class="m_li menu_category_bnt1"><a href="category-page.html">Брендированная одежда</a></li>
-                                    <li class="m_li menu_category" data-category="btn_m">Наружная реклама</li>
-                                    <li class="m_li menu_category" data-category="btn_m1">Широкоформатная печать</li>
-                                    <li class="m_li menu_category_bnt4">Оформление интерьеров</li>
-                                    <li class="m_li menu_category_bnt5">Сувенирная продукция</li>
-                                    <li class="m_li menu_category_bnt6">Полиграфия</li>
-                                    <li class="m_li menu_category_bnt7">Корпоративный стиль</li>
-                                    <li class="m_li menu_category_bnt8">Освещение</li>
-                                    <li class="m_li menu_category_bnt9">POS Материалы</li>
-                                    <li class="m_li menu_category_bnt10">Выставочные стенды</li>
-                                    <li class="m_li menu_category_bnt11">Эксклюзив</li>
-                                    <li class="m_li menu_category_bnt12">Дополнительные услуги</li>
+                                    <li class="menu_category_bnt1"><a href="category-page.html">Брендированная одежда</a></li>
+                                    <li class="menu_category" data-category="btn_m">Наружная реклама</li>
+                                    <li class="menu_category" data-category="btn_m1">Широкоформатная печать</li>
+                                    <li class="menu_category_bnt4">Оформление интерьеров</li>
+                                    <li class="menu_category_bnt5">Сувенирная продукция</li>
+                                    <li class="menu_category_bnt6">Полиграфия</li>
+                                    <li class="menu_category_bnt7">Корпоративный стиль</li>
+                                    <li class="menu_category_bnt8">Освещение</li>
+                                    <li class="menu_category_bnt9">POS Материалы</li>
+                                    <li class="menu_category_bnt10">Выставочные стенды</li>
+                                    <li class="menu_category_bnt11">Эксклюзив</li>
+                                    <li class="menu_category_bnt12">Дополнительные услуги</li>
                                 </ul>
                             </div>
                             <div class="menu_subcategory">
@@ -319,7 +319,7 @@
         </div>
         <div class="why_container">
             <img data-lazy="src/img/main/clock.svg" src="/" alt="decoration">
-            <p>Мы всегда выполняем<br> заказы в срок</p>
+            <p>Мы всегда выполняем<br>заказы в срок</p>
         </div>
         <div class="why_container">
             <img data-lazy="src/img/main/piggy-bank.svg" src="/" alt="decoration">
@@ -401,7 +401,7 @@
 <!--PORTFOLIO-->
 <section class="main_our_works xxx5">
     <div>
-        <div class="why_we_slogan bigger_center"><span class="adv_btn"><link  href="#" >Портфолио</span></div>
+        <div class="why_we_slogan bigger_center"><div class="adv_btn"><span><a href="#" >Портфолио</a></span></div></div>
     </div>
 </section>
 <!--FOOTER-->
@@ -436,7 +436,6 @@
                                 <label for="f_message">Сообщение</label>
                                 <textarea id="f_message" rows="5" cols="33"></textarea>
                             </div>
-<!--                            <button type="submit"  class="adv_btn fs20 f_btn btn4">Отправить</button>-->
                             <button type="submit"  class="btn-2"><span>Отправить</span></button>
                         </form>
                     </div>
