--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         </div>
         <div class="footer_top_right">
             <div class="footer_triangles">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <img data-lazy="src/img/footer/Triangle.svg" class="orbit" src="/" alt="decoration">
             </div>
             <div class="footer_contacts">
                 <div class="f_contacts">
