--- a/portfolio.html
+++ b/portfolio.html
@@ -103,19 +103,20 @@
         </div>
         <div class="xxx1">
             <div class="tab_control_container">
-                <button class="btn" onclick="openCategory(event,'c_brand')">Брендированная одежда</button>
-                <button class="btn" onclick="openCategory(event,'c_test')">Широкоформатная печать</button>
-                <button class="btn" onclick="openCategory(event,'c_exclusive1')">Сувенирная продукция</button>
-                <button class="btn" onclick="openCategory(event,'c_exclusive1')">Корпоративный стиль</button>
-                <button class="btn" onclick="openCategory(event,'c_exclusive1')">Наружная реклама</button>
-<!--                !!!!-->
-                <button class="btn" onclick="openCategory(event,'c_brand')">Оформление интерьеров</button>
-                <button class="btn" onclick="openCategory(event,'c_polygraphy')">Полиграфия</button>
-                <button class="btn" onclick="openCategory(event,'c_test')">Освещение</button>
-                <button class="btn" onclick="openCategory(event,'c_exclusive1')">Выставочные стенды</button>
-                <button class="btn" onclick="openCategory(event,'c_exclusive1')">Эксклюзив</button>
-                <button class="btn" onclick="openCategory(event,'c_exclusive1')">Дополнительные Услуги</button>
-                <button class="btn" onclick="openCategory(event,'c_test')">POS Материалы</button>
+                    <ul>
+                        <li class="btn" onclick="openCategory(event,'c_brand')">Брендированная одежда</li>
+                        <li class="btn" onclick="openCategory(event,'c_test')">Широкоформатная печать</li>
+                        <li class="btn" onclick="openCategory(event,'c_exclusive1')">Сувенирная продукция</li>
+                        <li class="btn" onclick="openCategory(event,'c_exclusive1')">Корпоративный стиль</li>
+                        <li class="btn" onclick="openCategory(event,'c_exclusive1')">Наружная реклама</li>
+                        <li class="btn" onclick="openCategory(event,'c_brand')">Оформление интерьеров</li>
+                        <li class="btn" onclick="openCategory(event,'c_polygraphy')">Полиграфия</li>
+                        <li class="btn" onclick="openCategory(event,'c_test')">Освещение</li>
+                        <li class="btn" onclick="openCategory(event,'c_exclusive1')">Выставочные стенды</li>
+                        <li class="btn" onclick="openCategory(event,'c_exclusive1')">Эксклюзив</li>
+                        <li class="btn" onclick="openCategory(event,'c_exclusive1')">Дополнительные Услуги</li>
+                        <li class="btn" onclick="openCategory(event,'c_test')">POS Материалы</li>
+                    </ul>
             </div>
             <div class="works_container">
                 <div class="works_wrapper category" id="c_brand">
