--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
         </div>
     </div>
     <div class="footer_mobile_copy">
-        <p>Copyright &copy; 2019-2020 ADVANCE.<br> All rights reserved</p>
+        <p>Copyright &copy; 2020 ADVANCE.<br> All rights reserved</p>
     </div>
 </footer>
 <script>
