--- a/index.html
+++ b/index.html
@@ -50,8 +50,13 @@
                     <li class="fs20 m_li"><a href="contacts.html" class="m_li">Контакты</a></li>
                 </ul>
             </nav>
-            <div class="menu_tel">
-                <a href="tel://057 761 761 6" class="orange">057 761 761 6</a>
+            <div class="menu_tel phone_list">
+                <ul>
+                    <li"><a href="tel://057 761 761 6" class="orange">057 761 761 6</a></li">
+                    <li><a href="tel://093 761 761 6" class="orange">093 761 761 6</a></li>
+                    <li><a href="tel://096 761 761 6" class="orange">096 761 761 6</a></li>
+                </ul>
+                <!-- <a href="tel://057 761 761 6" class="orange">057 761 761 6</a> -->
             </div>
         </div>
        <div class="mob_menu">
@@ -106,8 +111,16 @@
                 <p class="bigger">Наши услуги</p>
             </div>
             <div class="main_top_triangles">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <div class="exodus__ps-shape">
+                    <div class="exodus__ps-shape--triangle">
+                        <img class="exodus__ps-shape__svg" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                    </div>
+                </div>
+                <div class="exodus__ps-shape">
+                    <div class="exodus__ps-shape--triangle">
+                        <img class="exodus__ps-shape__svg" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="xxx1">
@@ -371,9 +384,24 @@
     </div>
     <div class="main_our_works_img_wrapper">
         <div class="main_gallery">
-            <div class="gallery_item"><img data-lazy="src/img/main/best/1E1R1841.png" src="/" alt="Black Image" /></div>
-            <div class="gallery_item long"><img  data-lazy="src/img/main/best/IMG_0018.jpeg" src="/" alt="Black Image" /></div>
-            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_0405.png" src="/" alt="Black Image" /></div>
+            <div class="gallery_item"><img data-lazy="src/img/main/best/1E1R1841.png" src="/" alt="Black Image" />
+                <div class="gallery_hover">
+                    <h5>1111</h5>
+                    <p>olololo</p>
+                </div>
+            </div>
+            <div class="gallery_item long"><img  data-lazy="src/img/main/best/IMG_0018.jpeg" src="/" alt="Black Image" />
+                <div class="gallery_hover">
+                    <h5>222</h5>
+                    <p>olololo</p>
+                </div>
+            </div>
+            <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_0405.png" src="/" alt="Black Image" />
+                <div class="gallery_hover">
+                    <h5>1111</h5>
+                    <p>olololo</p>
+                </div>
+            </div>
             <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_0991.jpeg" src="/" alt="Black Image" /></div>
             <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_3366.jpg" src="/" alt="Black Image" /></div>
             <div class="gallery_item"><img  data-lazy="src/img/main/best/IMG_3937.jpg" src="/" alt="Black Image" /></div>
@@ -446,8 +474,8 @@
                 </div>
             </div>
             <div class="footer_triangles">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <img data-lazy="src/img/footer/Triangle.svg" class="orbit" src="/" alt="decoration">
+                <img data-lazy="src/img/footer/Triangle.svg" class="orbit_rev" src="/" alt="decoration">
             </div>
         </div>
         <div class="footer_top_right">
