--- a/index.html
+++ b/index.html
@@ -5,10 +5,49 @@
     <title>Advance</title>
     <link rel="stylesheet" href="css/style.min.css">
     <script src="src/script/jquery.min.js"></script>
-    <script defer src="src/script/lazy.js"></script>
     <script defer src="src/script/main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <script type="application/ld+json">
+     {
+        "@context" : "http://schema.org",
+        "@type" : "LocalBusiness",
+        "name" : "ADVANCE",
+        "url" : "https://rakasovsky.github.io/adv.github.io",
+        "telephone" : "+38(096)761 761 6",
+        "email" : "advanced.kh.ua@gmail.com",
+        "logo" : "https://rakasovsky.github.io/adv.github.io/src/img/logo.jpg",
+        "address" : {
+          "@type" : "PostalAddress",
+          "streetAddress" : "ул.Клочковская, 192-A, Офис 124",
+          "addressLocality" : "Харьков",
+          "addressCountry" : "Украина",
+          "postalCode" : "61145"
+        },
+        "openingHoursSpecification": [
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": [
+                "Monday",
+                "Tuesday",
+                "Wednesday",
+                "Thursday",
+                "Friday"
+                ],
+                "opens": "10:00",
+                "closes": "18:00"
+            },
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": [
+                "Saturday",
+                "Sunday"
+                ]
+            }
+        ],
+        "image" : "https://rakasovsky.github.io/adv.github.io/src/img/logo.jpg"
+      } 
+      </script>
 </head>
 <body>
 <!--HEADER-->
@@ -521,8 +560,10 @@
                     <div>
                         <p class="orange">Наш адрес</p>
                         <p>Украина, Харьков</p>
-                        <p>ул.Мироносицкая, 88</p>
-                        <p>61023</p>
+                        <p>ул.Клочковская, 192-A</p>
+                        <p>БЦ "МІСТО"</p>
+                        <p>офис №124</p>
+                        <p>61145</p>
                     </div>
                 </div>
                 <div class="f_contacts">
@@ -543,7 +584,7 @@
                     </span>
                     <div>
                         <p class="orange">Telegram</p>
-                        <p><a href="tel://+30937617616 ">+3(093)761 761 6</a></p>
+                        <p><a href="tel://+380937617616 ">+38(093)761 761 6</a></p>
                     </div>
                 </div>
             </div>
